@@ -21,6 +21,7 @@ OutputBusXfers=Yes
 [Input1]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST1
 DelayChangePercent=5
 DelayControlSource=1000
 SourceIpAddress1=192.168.21.80
@@ -29,6 +30,7 @@ SourceIpAddress2=192.168.21.90
 [Input2]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST2
 DelayChangePercent=5
 DelayControlSource=1001
 SourceIpAddress1=192.168.21.81
@@ -37,6 +39,7 @@ SourceIpAddress2=192.168.21.91
 [Input3]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST3
 DelayChangePercent=5
 DelayControlSource=1002
 SourceIpAddress1=192.168.21.82
@@ -45,6 +48,7 @@ SourceIpAddress2=192.168.21.92
 [Input4]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST4
 DelayChangePercent=5
 DelayControlSource=1003
 SourceIpAddress1=192.168.21.83
@@ -53,6 +57,7 @@ SourceIpAddress2=192.168.21.93
 [Input5]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST5
 DelayChangePercent=5
 DelayControlSource=1004
 SourceIpAddress1=192.168.21.84
@@ -61,6 +66,7 @@ SourceIpAddress2=192.168.21.94
 [Input6]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST6
 DelayChangePercent=5
 DelayControlSource=1005
 SourceIpAddress1=192.168.21.85
@@ -69,6 +75,7 @@ SourceIpAddress2=192.168.21.95
 [Input7]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST7
 DelayChangePercent=5
 DelayControlSource=1006
 SourceIpAddress1=192.168.21.86
@@ -77,6 +84,7 @@ SourceIpAddress2=192.168.21.96
 [Input8]
 FullDelay=10
 DumpDelay=5
+CicProgramCode=TEST8
 DelayChangePercent=5
 DelayControlSource=1007
 SourceIpAddress1=192.168.21.87
