@@ -188,3 +188,6 @@
 2016-12-14 Fred Gleason <fredg@paravelsystems.com>
 	* Modified relay processing so as to require a GPIO source to be
 	one the list of input IP addresses in lwnetrouter.conf(5).
+2016-12-17 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'CicProgramCode=' directive to the [Outputs] section of
+	lwnetrouter.conf(5).
